--- a/tela-login.html
+++ b/tela-login.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="tela-login.css">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     <div class="tela-principal">
         <div class="tela-esquerda">
-            <h1><img src="./icon-biko.png" alt="">Junte-se a Biko!</h1>
+            <img src="./icon-biko-removebg-preview.png" alt="">
+            <h1>Junte-se <br>
+                 a Biko!</h1>
         </div>
         <div class="tela-direita">
             <div class="card-login">
                 <h1>BIKO</h1>
                 <div class="textfield">
-                    <label for="cpf">CPF</label>
                     <input type="text" name="cpf" placeholder="Digite seu CPF">
                 </div>
                 <div class="textfield">
-                    <label for="cpf">Senha</label>
                     <input type="password" name="cpf" placeholder="Digite sua Senha">
                 </div>
-                <button class="bnt-login">Login</button>
-                <p><a href="">não possuo uma conta</a></p>
+                <button class="btn-login">Login</button>
+                <p><a href="">Não possuo uma conta</a></p>
             </div>
+            <div class="card-shadow">.</div>
         </div>
     </div>
 </body>
